// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Invalid package.json does not make build fail 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/steps/fixtures/invalid_package_json
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/steps/fixtures/invalid_package_json

> Config file
  No config file was defined: using default values.

> Resolved config
  build:
    publish: packages/build/tests/steps/fixtures/invalid_package_json
    publishOrigin: default

> Context
  production

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`build.command can execute global binaries 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/steps/fixtures/global_bin
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/steps/fixtures/global_bin

> Config file
  packages/build/tests/steps/fixtures/global_bin/netlify.toml

> Resolved config
  build:
    command: node --version
    commandOrigin: config
    publish: packages/build/tests/steps/fixtures/global_bin
    publishOrigin: default

> Context
  production

build.command from netlify.toml                               
────────────────────────────────────────────────────────────────

$ node --version
v1.0.0

(build.command completed in 1ms)
Build step duration: build.command completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`build.command can execute local binaries 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/steps/fixtures/local_bin
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/steps/fixtures/local_bin

> Config file
  packages/build/tests/steps/fixtures/local_bin/netlify.toml

> Resolved config
  build:
    command: atob dGVzdA==
    commandOrigin: config
    publish: packages/build/tests/steps/fixtures/local_bin
    publishOrigin: default

> Context
  production

build.command from netlify.toml                               
────────────────────────────────────────────────────────────────

$ atob dGVzdA==
test

(build.command completed in 1ms)
Build step duration: build.command completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`build.command can execute shell commands 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/steps/fixtures/shell
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/steps/fixtures/shell

> Config file
  packages/build/tests/steps/fixtures/shell/netlify.toml

> Resolved config
  build:
    command: node --version && node --version
    commandOrigin: config
    publish: packages/build/tests/steps/fixtures/shell
    publishOrigin: default

> Context
  production

build.command from netlify.toml                               
────────────────────────────────────────────────────────────────

$ node --version && node --version
v1.0.0
v1.0.0

(build.command completed in 1ms)
Build step duration: build.command completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`build.command from UI settings 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/steps/fixtures/none
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/steps/fixtures/none

> Config file
  No config file was defined: using default values.

> Resolved config
  build:
    command: node --version
    commandOrigin: ui
    publish: packages/build/tests/steps/fixtures/none
    publishOrigin: default

> Context
  production

Build command from Netlify app                                
────────────────────────────────────────────────────────────────

$ node --version
v1.0.0

(build.command completed in 1ms)
Build step duration: build.command completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`build.command use correct PWD 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/steps/fixtures/pwd
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/steps/fixtures/pwd

> Config file
  packages/build/tests/steps/fixtures/pwd/netlify.toml

> Resolved config
  build:
    command: node file.js
    commandOrigin: config
    publish: packages/build/tests/steps/fixtures/pwd
    publishOrigin: default

> Context
  production

build.command from netlify.toml                               
────────────────────────────────────────────────────────────────

$ node file.js
true

(build.command completed in 1ms)
Build step duration: build.command completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`build.command uses Bash 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/steps/fixtures/bash
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/steps/fixtures/bash

> Config file
  packages/build/tests/steps/fixtures/bash/netlify.toml

> Resolved config
  build:
    command: echo $BASH
    commandOrigin: config
    publish: packages/build/tests/steps/fixtures/bash
    publishOrigin: default

> Context
  production

build.command from netlify.toml                               
────────────────────────────────────────────────────────────────

$ echo $BASH
/external/path

(build.command completed in 1ms)
Build step duration: build.command completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;
